--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Agent Builder <agent@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<=3.13"
+python = ">=3.11,<3.13"
 fastapi = "^0.104.1"
 uvicorn = {extras = ["standard"], version = "^0.24.0"}
 pydantic = "^2.5.0"
@@ -17,12 +17,18 @@ pandas = "^2.1.0"
 numpy = "^1.24.0"
 lxml = "^5.1.0"
 openai = "^1.3.0"
-langchain = "^0.1.0"
-langchain-openai = "^0.0.2"
-langchain-core = "^0.1.0"
+langchain = ">=0.3.0"
+langchain-openai = ">=0.2.0"
+langchain-core = ">=0.2.38"
 sentence-transformers = "^2.2.2"
 faiss-cpu = "^1.7.4"
-langchain-community = "^0.0.10"
+langchain-community = ">=0.3.0"
+streamlit = "^1.45.1"
+langgraph = "^0.4.7"
+crewai = "^0.121.0"
+openai-whisper = "^20240930"
+speechrecognition = "^3.14.3"
+pydub = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -30,7 +36,7 @@ pytest-asyncio = "^0.21.0"
 black = "^23.11.0"
 ruff = "^0.1.6"
 pre-commit = "^3.5.0"
-httpx = "^0.25.0"
+httpx = "^0.27.0"
 
 [build-system]
 requires = ["poetry-core"]
