--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 streamlit==1.31.0
-pandas==1.5.3
-numpy==1.23.5
-requests==2.31.0
-beautifulsoup4==4.12.2
+pandas==2.0.3
+numpy==1.24.3
+yfinance==0.2.28
+plotly==5.17.0
 python-dotenv==1.0.0
-lxml==4.9.3
-openai==1.10.0
-langchain-core==0.1.16
-langchain-openai==0.0.5
-langchain==0.0.335
-langchain-community==0.0.16
+google-generativeai==0.3.2
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
-google-generativeai==0.3.2
+openai==1.6.1
+langchain==0.1.0
+langchain-openai==0.0.2
+langchain-core==0.1.10
+whisper-openai==20231117
 edge-tts==6.1.9
+SpeechRecognition==3.10.0
+pyaudio==0.2.11
+scikit-learn==1.3.2
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
 gtts==2.5.0
-speechrecognition==3.10.0
 pydub==0.25.1 
