--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.4
-yfinance==0.2.28
+pandas>=2.2.0
+numpy>=1.26.0
 plotly==5.17.0
+yfinance==0.2.38
+google-generativeai==0.8.3
+sentence-transformers==3.3.1
+faiss-cpu==1.9.0
+edge-tts==6.1.12
+openai-whisper==20240930
 python-dotenv==1.0.0
 requests==2.31.0
-edge-tts==6.1.9
 SpeechRecognition==3.10.0 
