--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ google-generativeai==0.8.3
 sentence-transformers==3.3.1
 faiss-cpu==1.9.0
 edge-tts==6.1.12
-whisper==1.1.10
+openai-whisper==20231117
 python-dotenv==1.0.0
 requests==2.31.0
-SpeechRecognition==3.10.0 
+SpeechRecognition==3.10.0
+PyAudio==0.2.14
+pydub==0.25.1 
