--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ whisper==1.1.10
 python-dotenv==1.0.0
 requests==2.31.0
 SpeechRecognition==3.10.0
-pydub==0.25.1 
+pydub==0.25.1
+langchain-core==0.3.15
+langgraph==0.2.39 
