--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
-streamlit==1.31.0
-pandas>=2.2.0
+streamlit>=1.31.0
+pandas>=2.2.3
 numpy>=1.26.0
-plotly==5.17.0
-yfinance==0.2.38
-google-generativeai==0.8.3
-sentence-transformers==3.3.1
-edge-tts==6.1.12
+plotly>=5.22.0
+yfinance>=0.2.38
+google-generativeai>=0.8.3
+edge-tts>=6.1.18
 whisper==1.1.10
-python-dotenv==1.0.0
-requests==2.31.0
-SpeechRecognition==3.10.0
-pydub==0.25.1
+requests>=2.32.3
 langchain-core==0.3.15
-langgraph==0.2.39 
+langgraph==0.2.39
+faiss-cpu==1.9.0
+sentence-transformers>=3.3.1
+langchain-community>=0.3.7
+streamlit-audio-recorder>=0.0.5
+python-dotenv==1.0.0
+SpeechRecognition==3.10.0
+pydub==0.25.1 
