--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ pandas>=2.2.3
 google-generativeai>=0.8.3
 edge-tts>=6.1.18
 requests>=2.32.3
-sentence-transformers>=3.3.1 
+sentence-transformers>=3.3.1
+pytz>=2023.3 
