Fix analytics NoneType error and font issues for Streamlit Cloud deployment

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,8 +3,12 @@ primaryColor = "#1E88E5"
 backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
-font = "sans serif"
+font = "monospace"
 
 [server]
 port = 8501
-enableCORS = true 
+enableCORS = true
+headless = true
+
+[browser]
+gatherUsageStats = false 
